--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
+        "axios": "^0.25.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.77.5",
+        "sass-loader": "^12.1.0",
+        "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.3",
+        "vue": "^3.4.27"
     }
 }
